force-app/main/default/objects/Blueprint__c/Blueprint__c.object-meta.xml
<CustomObject>
    <label>Blueprint</label>
    <nameField>
        <label>Blueprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blueprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>