force-app/main/default/objects/Blueprint__c/fields/Hide_Wizard__c.field-meta.xml
<CustomField>
    <fullName>Hide_Wizard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Wizard</label>
    <type>Checkbox</type>
</CustomField>