force-app/main/default/objects/Blueprint__c/fields/Persona_Count__c.field-meta.xml
<CustomField>
    <fullName>Persona_Count__c</fullName>
    <label>Persona Count</label>
    <summaryForeignKey>Blueprint_Persona__c.Blueprint__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>