force-app/main/default/objects/Blueprint__c/fields/Step_Count__c.field-meta.xml
<CustomField>
    <fullName>Step_Count__c</fullName>
    <label>Step Count</label>
    <summaryForeignKey>Blueprint_Step__c.Blueprint__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>